--- a/Web/index.html
+++ b/Web/index.html
@@ -11,7 +11,6 @@
 
   <!-- Favicons -->
   <link href="../Images/playbookicon1.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -76,7 +75,7 @@
 
       <div class="header-social-links d-flex align-items-center">
         <!-- Welcome Message and Logout Button -->
-        <span id="welcomeMessage" style="color: white;"></span>
+        <a href="../Web/profile.html" id="button-profile" class="btn btn-outline-primary"><span id="welcomeMessage" style="color: white;"></span></a>
         <button class="btn btn-outline-primary ms-3 active" id="logoutButton" onclick="logout()">Logout</button>
         <!-- Sign Up Button -->
         <a href="../Web/signup.html" class="btn btn-outline-primary ms-3" id="signUpButton">Sign Up</a>
@@ -297,7 +296,7 @@
             <div class="col-lg-4 col-md-6 mt-4 owneronly">
               <div class="icon-box">
                 <div class="icon"><i class="bi bi-bank" style="color: #4680ff;"></i></div>
-                <h4 class="title"><a href="">Check and Release Funds <br>(Owner Only)</a></h4>
+                <h4 class="title"><a href="../Web/releasefunds.html">Check and Release Funds <br>(Owner Only)</a></h4>
                 <p class="description">Check Bets of Events and Release Funds to winner!</p>
             </div>
           </div>
