--- a/Web/portfolio-details.html
+++ b/Web/portfolio-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Valera Bootstrap Template</title>
+  <title>Portfolio Details - PlayBook</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -149,8 +149,8 @@
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
+   <!-- ======= Footer ======= -->
+   <footer id="footer">
 
     <div class="footer-top">
 
@@ -158,8 +158,8 @@
 
         <div class="row  justify-content-center">
           <div class="col-lg-6">
-            <h3>Valera</h3>
-            <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+            <h3><a href="index.html"><a href="index.html" class="logo me-auto me-lg-0"><img src="../Images/playbooklogo2.png" alt="" class="img-fluid"></a></h3>
+            <p>Enter your email to receive our monthly newsletter!</p>
           </div>
         </div>
 
@@ -184,14 +184,9 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>Valera</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>PlayBook</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/valera-free-bootstrap-theme/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End Footer -->
