--- a/Web/profile.html
+++ b/Web/profile.html
@@ -5,13 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Valera Bootstrap Template</title>
+  <title>Profile | PlayBook</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../Images/playbookicon1.png" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -46,7 +45,7 @@
         <ul>
           <li><a class="nav-link scrollto" href="../Web/index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="../Web/index.html">About</a></li>
-          <li class="dropdown"><a href="#services"  class="nav-link scrollto active"><span>Events</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#services"  class="nav-link scrollto"><span>Events</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="../Web/eventinfo.html">View Event Information</a></li>
               <li><a href="../Web/createvent.html">Create New Events</a></li>
